trunk/Archive2/38/e962e8847cbcc1/output
main.cpp: In function 'int main()':
main.cpp:3:5: error: 'LazyContainer' was not declared in this scope
     LazyContainer<int> container;
     ^
main.cpp:3:19: error: expected primary-expression before 'int'
     LazyContainer<int> container;
                   ^
main.cpp:3:19: error: expected ';' before 'int'
main.cpp:5:5: error: 'cout' is not a member of 'std'
     std::cout << "n: " << n << std::endl; // 0
     ^
main.cpp:5:32: error: 'endl' is not a member of 'std'
     std::cout << "n: " << n << std::endl; // 0
                                ^
main.cpp:6:5: error: 'container' was not declared in this scope
     container.set(++n);
     ^
main.cpp:7:5: error: 'cout' is not a member of 'std'
     std::cout << "(++n) n: " << n << std::endl; // 0
     ^
main.cpp:7:38: error: 'endl' is not a member of 'std'
     std::cout << "(++n) n: " << n << std::endl; // 0
                                      ^
main.cpp:8:5: error: 'cout' is not a member of 'std'
     std::cout << "get(): " << container.get() << std::endl; // 1
     ^
main.cpp:8:50: error: 'endl' is not a member of 'std'
     std::cout << "get(): " << container.get() << std::endl; // 1
                                                  ^
main.cpp:9:5: error: 'cout' is not a member of 'std'
     std::cout << "get(): " << container.get() << std::endl; // 2
     ^
main.cpp:9:50: error: 'endl' is not a member of 'std'
     std::cout << "get(): " << container.get() << std::endl; // 2
                                                  ^
main.cpp:10:5: error: 'cout' is not a member of 'std'
     std::cout << "n: " << n << std::endl; // 2
     ^
main.cpp:10:32: error: 'endl' is not a member of 'std'
     std::cout << "n: " << n << std::endl; // 2
                                ^
main.cpp:12:45: error: 'LazyContainer2' was not declared in this scope
     auto container2 = LazyContainer2(------n);
                                             ^
main.cpp:13:5: error: 'cout' is not a member of 'std'
     std::cout << "(------n) n: " << n << std::endl; // 2
     ^
main.cpp:13:42: error: 'endl' is not a member of 'std'
     std::cout << "(------n) n: " << n << std::endl; // 2
                                          ^
main.cpp:14:5: error: 'cout' is not a member of 'std'
     std::cout << "get(): " << container2.get() << std::endl; // -1
     ^
main.cpp:14:51: error: 'endl' is not a member of 'std'
     std::cout << "get(): " << container2.get() << std::endl; // -1
                                                   ^
